- 2.2.19: * the "keytab" option can now be used to specify a custom location
            for a given service from within krb5.conf
- 2.2.18: * fix permissions-related problems creating v4 ticket files
- 2.2.17: * corrected a typo in the pam_krb5(8) man page
	  * clarified that the "tokens" flag should only be needed for
	    applications which are not using PAM correctly
	  * clarified COPYING and .spec file to better reflect licensing as
	    indicated in the source files
- 2.2.16: * don't bother using a helper for creating v4 ticket files when we're
	    just getting tokens
	  * clean up the debug message which we emit when we do v5->v4
	    principal name conversion
	  * compilation fixes
- 2.2.15: * let default "external" and "use_shmem" settings be specified at
	    compile-time
	  * correctly return a "unknown user" error when attempting to change
	    a password for a user who has no corresponding principal (#235020)
	  * don't bother using a helper for creating ccache files, which we're
	    just going to delete, when we need to get tokens
- 2.2.14: * handle "client revoked" errors
- 2.2.13: * make it possible to have more than one ccache (and tktfile) at a
	    time to work around apps which open a session, set the environment,
	    and initialize creds (when we previously created a ccache, removing
	    the one which was named in the environment)
- 2.2.12: * add a "pwhelp" option.  Display the KDC error to users.
- 2.2.11: * return success from our account management callback in cases where
	    our authentication callback simply failed to authenticate (#207410)
	  * fix setting of items for password-changing modules which get called
	    after us (Michael Calmer)
- 2.2.10: * add the "no_subsequent_prompt" option, to force the module to
	    always answer a libkrb5 prompt with the PAM_AUTHTOK value
	  * add the "debug_sensitive" option, which actually logs passwords
	  * add the --with-os-distribution option to configure to override