@@ -1,5 +1,8 @@
 - 2.2.19: * the "keytab" option can now be used to specify a custom location
             for a given service from within krb5.conf
+	  * log messages are now logged with facility LOG_AUTHPRIV (or LOG_AUTH
+	    if LOG_AUTHPRIV is not defined) instead of the application's default
+	    or LOG_USER
 - 2.2.18: * fix permissions-related problems creating v4 ticket files
 - 2.2.17: * corrected a typo in the pam_krb5(8) man page
 	  * clarified that the "tokens" flag should only be needed for
